...
            "state": "translated",
            "value": "Até %lld km"
          }
        }
      }
    },
    "Avaliar turno": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Avaliar turno"
          }
...
            "state": "translated",
            "value": "Material próprio: %@"
          }
        }
      }
    },
    "Meu turno": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Meu turno"
          }
        }
      }
    },
    "Meus turnos": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Meus turnos"
          }
...
            "state": "translated",
            "value": "Tenho 18 anos ou mais"
          }
        }
      }
    },
    "Tentar novamente": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Tentar novamente"
          }
...
            "state": "translated",
            "value": "Vagas"
          }
        }
      }
    },
    "Vagas no DF": {
      "localizations": {
        "pt-BR": {
          "stringUnit": {
            "state": "translated",
            "value": "Vagas no DF"
          }
...
